--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 buildscript {
     ext {
-        compose_version = '1.4.0-rc01'
+        compose_version = ' 1.6.0-alpha07'
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-serialization:1.8.10"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.9.0"
     }
 }
 plugins {
-    id 'com.android.application' version '7.4.0' apply false
-    id 'com.android.library' version '7.4.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'com.android.application' version '8.1.1' apply false
+    id 'com.android.library' version '8.1.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.10'
+    id 'com.google.devtools.ksp' version '1.9.0-1.0.13' apply false
 }
